--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -1,6 +1,6 @@
 <!doctype html><html><body>
 <h1>Users</h1>
-<p>{{ request.session.get("username", "") }} ({{ request.session.get("role", "") }}) • <a href="/admin">Admin</a></p>
+<p>{{ current_username|default("Guest") }} ({{ current_user_role|default("ADMIN") }}) • <a href="/admin">Admin</a></p>
 <a href="/admin/users/new">Create user</a>
 <table border="1" cellpadding="6">
 <tr><th>ID</th><th>Username</th><th>Role</th><th>Active</th><th>Created at</th><th>Change password</th></tr>
